2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Recomment out debug log the accidentialy went in.

	* configure.in:
	* tests/Makefile.am:
	* tests/fail.sh:
	* tests/tools.sh.in:
	* tests/tools.sh.in (added):
	  Add a check that tests that all scripts are runnable.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-check.in:
	  No need to format a '\n' into a fromatstring.

	* gtkdoc-mkdb.in:
	  Add FIXMEs for Bug 568711.

	* gtkdoc-mkhtml.in:
	  Add a comment.

	* configure.in:
	* tests/Makefile.am:
	* tests/fail.sh:
	* tests/fail/Makefile.am:
	* tests/fail/docs/Makefile.am:
	* tests/fail/docs/tester-docs.xml:
	* tests/fail/docs/tester-sections.txt:
	* tests/fail/src/Makefile.am:
	* tests/fail/src/tester.c:
	* tests/fail/src/tester.h:
	  Add a test suite for failure checks.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Don't scan files twice. The patch was slightly changed to name the
	  hash lowercase (uppercase is used for configureation options) and
	  add a comment. Fixes #568708.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	  Don't add empty <para></para> tags to the docs to avoid breaking the
	  detection of undocumented things. Fixes #568732.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.m4:
	  Change nonsense error message to tell that gtk-doc is needed to build
	  a given package and not gtk-doc. Fixes #568734.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-scan.in:
	  Treat iface/interface like class in other places too.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Use CamelCase id for interfaces. Fixes #568706.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>
