@@ -48,3 +48,8 @@ time xsltproc --nonet --xinclude --stringparam gtkdoc.bookname "tester" --string
 time saxon ../tester-docs.xml ../../../../gtk-doc.xsl gtkdoc.bookname="tester" gtkdoc.version="1.12"
 ~ 53 sec.
 
+Troubles with parsing regexps
+=============================
+Test regexps online:
+http://www.solmetra.com/scripts/regex/index.php
+
