@@ -1,3 +1,14 @@
+2009-01-26  Stefan Kost  <ensonic@users.sf.net>
+
+	* HACKING:
+	  Mention onine site for regexp testing.
+
+	* gtkdoc-mkdb.in:
+	  Small output cleanups.
+
+	* gtkdoc-mktmpl.in:
+	  Indenting and use LogWarning once more.
+
 2009-01-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
@@ -13,7 +24,7 @@
 2009-01-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-check.in:
-	  No need to format a '\n' into a fromatstring.
+	  No need to format a '\n' into a formatstring.
 
 	* gtkdoc-mkdb.in:
 	  Add FIXMEs for Bug 568711.
